cleaned up the program.cs replaced business with core lib

--- a/n2czh/n2czh.csproj
+++ b/n2czh/n2czh.csproj
@@ -11,4 +11,8 @@
     <Folder Include="packages\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\n2czh.core\n2czh.core.csproj" />
+  </ItemGroup>
+
 </Project>
